-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.9.0
-
None
-
Ubuntu 22 and 24 on regular PC
-
-
69e66bb18 (6.9.1), b8dbce95b (dev), f29c9886e (6.9), c451aaadd (dev), 039fcfcfe (6.10), 401e5d9ad (6.9.3)
Steps to reproduce
- Set
export QT_IM_MODULE=qtvirtualkeyboard
- Run example qtbase/examples/widgets/widgets/lineedits
- Type in any field
- Observe VKB not opening and error
qrc:/qt-project.org/imports/QtQuick/VirtualKeyboard/InputPanel.qml: No such file or directory
Original report
I'm struggling with an issue with the virtualkeyboard of Qt using Pyside6 :
I have tried my app on a RaspberryPi with debian and no issue at all with the keyboard, with just a pip install pyside6, everything is working fine.
But on a regular PC with Ubuntu (22 and 24), after installing pyside6 with pip install pyside6 , I keep getting this error :
qrc:/qt-project.org/imports/QtQuick/VirtualKeyboard/InputPanel.qml: No such file or directory
The workaround was to make a downgrade to Pyside 6.7.3 and then everething is working fine.
- resulted from
-
QTBUG-128606 CMake Error: The inter-target dependency graph contains the following strongly connected component (cycle)
-
- Closed
-