Load the InputPanel component from the QtQuick.VirtualKeyboard module

Avoid using inconvinient resource path when loading the InputPanel
component in DesktopInputPanel. Use the introduced in Qt 6.7
QQuickView::loadFromModule interface instead.

Task-number: QTBUG-137250
Fixes: QTBUG-137921
Pick-to: 6.10 6.9.3
Change-Id: I0ef36d4c187e9ed8188f7ed97ce3e9e1f3dcd38a
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
Reviewed-by: Jarkko Koivikko <jarkko.koivikko@code-q.fi>